[package]
name = "rust_recon"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ipaddress = "0.1.3"
regex = "1.4"
base64 = "0.13.0"
clap = "3.0.0"
which = "3.0"
